--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-# Default environment variables for Docker Compose file
-
-# TurtleBot3 model
-TURTLEBOT3_MODEL=waffle_pi
-
-REPO=ros_testing_templates
+# Default environment variables for Docker Compose file 
+REPO=my_package
