--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,9 +20,9 @@ services:
       dockerfile: docker/Dockerfile
       args:
         - REPO=${REPO}
-        - ROS_DISTRO=${ROS_DISTRO:-humble}
+        - ROS_DISTRO=${ROS_DISTRO}
       target: base
-    image: ${REPO}-dev:${ROS_DISTRO}
+    image: ${REPO}-base:${ROS_DISTRO}
     # Interactive shell
     stdin_open: true
     tty: true
@@ -32,8 +32,6 @@ services:
     # Needed to display graphical applications
     privileged: True
     environment:
-      # Needed to define a TurtleBot3 model type
-      - TURTLEBOT3_MODEL=${TURTLEBOT3_MODEL:-waffle_pi}
       # Allows graphical programs in the container.
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM=1
@@ -57,7 +55,7 @@ services:
   # Overlay image containing the example source code.
   overlay:
     extends: base
-    image: turtlebot3_behavior:overlay
+    image: ${REPO}-overlay:${ROS_DISTRO}
     build:
       context: .
       dockerfile: docker/Dockerfile
@@ -66,7 +64,7 @@ services:
   # Developer container
   dev:
     extends: overlay
-    image: turtlebot3_behavior:dev
+    image: ${REPO}-dev:${ROS_DISTRO}
     build:
       context: .
       dockerfile: docker/Dockerfile
@@ -87,29 +85,6 @@ services:
     command: sleep infinity
 
   # Runs basic TurtleBot3 simulation
-  sim:
-    extends: overlay
-    command: ros2 launch turtlebot3_gazebo turtlebot3_world.launch.py
-
-  # Demo world
-  demo-world:
-    extends: overlay
-    command: ros2 launch tb3_worlds tb3_demo_world.launch.py
-
-  # Behavior demo using Python and py_trees
-  demo-behavior-py:
-    extends: overlay
-    command: >
-      ros2 launch tb3_autonomy tb3_demo_behavior_py.launch.py
-      tree_type:=${BT_TYPE:?}
-      enable_vision:=${ENABLE_VISION:?}
-      target_color:=${TARGET_COLOR:?}
-
-  # Behavior demo using C++ and BehaviorTree.CPP
-  demo-behavior-cpp:
-    extends: overlay
-    command: >
-      ros2 launch tb3_autonomy tb3_demo_behavior_cpp.launch.py
-      tree_type:=${BT_TYPE:?}
-      enable_vision:=${ENABLE_VISION:?}
-      target_color:=${TARGET_COLOR:?}
+  # sim:
+  #   extends: overlay
+  #   command: ros2 launch turtlebot3_gazebo turtlebot3_world.launch.py
