--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -49,9 +49,9 @@ RUN source /opt/ros/${ROS_DISTRO}/setup.bash \
     && colcon build --mixin release lld
 
 # Download Groot2 AppImage and place it in the home folder.
-WORKDIR /root/
-RUN curl -o Groot2.AppImage https://s3.us-west-1.amazonaws.com/download.behaviortree.dev/groot2_linux_installer/Groot2-v1.0.1-x86_64.AppImage \
-    && chmod a+x Groot2.AppImage
+# WORKDIR /root/
+# RUN curl -o Groot2.AppImage https://s3.us-west-1.amazonaws.com/download.behaviortree.dev/groot2_linux_installer/Groot2-v1.0.1-x86_64.AppImage \
+#     && chmod a+x Groot2.AppImage
 
 # Remove display warnings
 RUN mkdir /tmp/runtime-root
@@ -88,11 +88,12 @@ FROM overlay as dev
 
 # Dev container arguments
 ARG USERNAME=devuser
-ARG UID=1000
-ARG GID=${UID}
+ARG UID=${UID}
+ARG GID=${GID}
 
 # Install extra tools for development
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt,id=apt \
+    apt-get update && apt-get install -y --no-install-recommends \
     gdb gdbserver nano \
     clang-14 \
     clang-format-14 \
@@ -120,10 +121,10 @@ RUN groupadd --gid $GID $USERNAME \
 RUN chown -R ${UID}:${GID} /overlay_ws/
 
 # Move Groot2 to new user's home directory and ensure it can be run
-RUN groupadd fuse \
-    && usermod -aG fuse ${USERNAME}
-RUN mv /root/Groot2.AppImage /home/${USERNAME} \
-    && chown ${UID}:${GID} /home/${USERNAME}/Groot2.AppImage
+# RUN groupadd fuse \
+#     && usermod -aG fuse ${USERNAME}
+# RUN mv /root/Groot2.AppImage /home/${USERNAME} \
+#     && chown ${UID}:${GID} /home/${USERNAME}/Groot2.AppImage
 
 # Set the user and source entrypoint in the user's .bashrc file
 USER ${USERNAME}
