Update ROS template

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Default environment variables for Docker Compose file
 REPO=my_package
 ROS_DISTRO=humble
+PYTHONPATH=src:install/lib/python3.10/site-packages
