--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,9 +24,8 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-executables-have-shebangs
-      - id: check-json
-      - id: check-executables-have-shebangs
-      - id: pretty-format-json
+      # - id: check-json
+      # - id: pretty-format-json
       - id: check-merge-conflict
       - id: check-symlinks
       - id: check-toml
