--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,26 +8,26 @@
         "*.world": "xml",
         "*.xacro": "xml"
     },
-    // "python.analysis.extraPaths": [
-    //     "/opt/ros/humble/lib/python3.10/site-packages/"
-    // ],
-    // // Autocomplete from ros python packages
-    // "python.autoComplete.extraPaths": [
-    //     "/opt/ros/humble/lib/python3.10/site-packages/"
-    // ],
-    // // Environment file lets vscode find python files within workspace
-    // "python.envFile": "${workspaceFolder}/.env",
-    // // Use the system installed version of autopep8
-    // "python.formatting.autopep8Path": "/usr/bin/autopep8",
-    // "python.formatting.autopep8Args": [
-    //     "--max-line-length=100"
-    // ],
-    // "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
-    // "C_Cpp.formatting": "disabled",
-    // "uncrustify.configPath.linux": "/opt/ros/humble/lib/python3.10/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
-    // "[cpp]": {
-    //     "editor.defaultFormatter": "zachflower.uncrustify"
-    // },
+    "python.analysis.extraPaths": [
+        "/opt/ros/humble/lib/python3.10/site-packages/"
+    ],
+    // Autocomplete from ros python packages
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/humble/lib/python3.10/site-packages/"
+    ],
+    // Environment file lets vscode find python files within workspace
+    "python.envFile": "${workspaceFolder}/.env",
+    // Use the system installed version of autopep8
+    "python.formatting.autopep8Path": "/usr/bin/autopep8",
+    "python.formatting.autopep8Args": [
+        "--max-line-length=100"
+    ],
+    "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
+    "C_Cpp.formatting": "disabled",
+    "uncrustify.configPath.linux": "/opt/ros/humble/lib/python3.10/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
+    "[cpp]": {
+        "editor.defaultFormatter": "zachflower.uncrustify"
+    },
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
@@ -70,5 +70,6 @@
         ".vscode",
         ".vscode-insiders",
         ".devcontainer/devcontainer.json"
-    ]
+    ],
+    "cmake.sourceDirectory": "/home/joenghan/gole_core_ros/gole/ros2_template_pkg/extern/googletest/googlemock"
 }
