--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,28 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-    "dockerComposeFile": "../docker-compose.yaml",
-    "service": "dev",
-    "workspaceFolder" : "/overlay_ws",
-	// Set *default* container specific settings.json values on container create.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"althack.ament-task-provider",
-				"betwo.b2-catkin-tools",
-				"DotJoshJohnson.xml",
-				"ms-azuretools.vscode-docker",
-				"ms-iot.vscode-ros",
-				"ms-python.python",
-				"ms-vscode.cpptools",
-				"redhat.vscode-yaml",
-				"smilerobotics.urdf",
-				"streetsidesoftware.code-spell-checker",
-				"twxs.cmake",
-				"yzhang.markdown-all-in-one",
-				"zachflower.uncrustify"
-			]
-		}
-	}
-}
+	"dockerComposeFile": "../docker-compose.yaml",
+	"service": "dev",
+	"workspaceFolder" : "/overlay_ws",
+	    // Set *default* container specific settings.json values on container create.
+	    "customizations": {
+		    "vscode": {
+			    "extensions": [
+				    "althack.ament-task-provider",
+				    "betwo.b2-catkin-tools",
+				    "DotJoshJohnson.xml",
+				    "ms-azuretools.vscode-docker",
+				    "ms-iot.vscode-ros",
+				    "ms-python.python",
+				    "ms-vscode.cpptools",
+				    "redhat.vscode-yaml",
+				    "smilerobotics.urdf",
+				    "streetsidesoftware.code-spell-checker",
+				    "twxs.cmake",
+				    "yzhang.markdown-all-in-one",
+				    "zachflower.uncrustify",
+				    "redhat.vscode-xml"
+			    ]
+		    }
+	    }
+    }
+    
