--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 # Default environment variables for Docker Compose file
 REPO=my_package
-ROS_DISTRO=humble
-PYTHONPATH=src:install/lib/python3.10/site-packages
+ROS_DISTRO=noetic
