--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,14 +9,12 @@
         "*.xacro": "xml"
     },
     "python.analysis.extraPaths": [
-        "/opt/ros/humble/lib/python3.10/site-packages/"
+        "/opt/ros/noetic/lib/python3/dist-packages/"
     ],
     // Autocomplete from ros python packages
     "python.autoComplete.extraPaths": [
-        "/opt/ros/humble/lib/python3.10/site-packages/"
+        "/opt/ros/noetic/lib/python3/dist-packages/"
     ],
-    // Environment file lets vscode find python files within workspace
-    "python.envFile": "${workspaceFolder}/.env",
     // Use the system installed version of autopep8
     "python.formatting.autopep8Path": "/usr/bin/autopep8",
     "python.formatting.autopep8Args": [
@@ -24,7 +22,6 @@
     ],
     "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
     "C_Cpp.formatting": "disabled",
-    "uncrustify.configPath.linux": "/opt/ros/humble/lib/python3.10/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
     "[cpp]": {
         "editor.defaultFormatter": "zachflower.uncrustify"
     },
@@ -49,8 +46,8 @@
         "ints",
         "noqa",
         "pytest",
-        "rclcpp",
-        "rclpy",
+        "ros",
+        "rospy",
         "repos",
         "rosdep",
         "rosdistro",
