--- a/.gitignore
+++ b/.gitignore
@@ -1232,9 +1232,9 @@ AMENT_IGNORE
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 [Bb]in
-[Ii]nclude
+#[Ii]nclude
 # [Ll]ib
-[Ll]ib64
+#[Ll]ib64
 [Ll]ocal
 [Ss]cripts
 pyvenv.cfg
