Update vscode extension

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,7 +19,7 @@
             "label": "build_package",
             "detail": "Build a specific package",
             "type": "shell",
-            "command": "colcon build --packages-select ${input:package}",
+            "command": "colcon build --symlink-install --packages-select ${input:package}",
             "problemMatcher": "$gcc"
         },
         {
@@ -198,14 +198,14 @@
             "label": "new ament_cmake package",
             "detail": "Create a new ROS cpp package from a template.",
             "type": "shell",
-            "command": "ros2 pkg create --destination-directory src/ddeck --build-type ament_cmake ${input:package}",
+            "command": "ros2 pkg create --destination-directory src --build-type ament_cmake ${input:package}",
             "problemMatcher": []
         },
         {
             "label": "new ament_python package",
             "detail": "Create a new ROS python package from a template.",
             "type": "shell",
-            "command": "ros2 pkg create --destination-directory src/ddeck --build-type ament_python ${input:package}",
+            "command": "ros2 pkg create --destination-directory src --build-type ament_python ${input:package}",
             "problemMatcher": []
         },
         {
