--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,36 @@
 {
+    // editor settings
     "editor.tabSize": 4,
-    "editor.rulers": [
-        100
-    ],
+    "editor.rulers": [100],
+    "editor.minimap.enabled": false,
+    "editor.mouseWheelZoom": true,
+    "editor.renderControlCharacters": true,
+    // Set the file associations for ros files
     "files.associations": {
         "*.repos": "yaml",
         "*.world": "xml",
         "*.xacro": "xml"
     },
+    "terminal.integrated.scrollback": 1000000,
+
+    // Set the python path to the ros python packages
     "python.analysis.extraPaths": [
         "/opt/ros/humble/lib/python3.10/site-packages/"
     ],
-    // Autocomplete from ros python packages
     "python.autoComplete.extraPaths": [
         "/opt/ros/humble/lib/python3.10/site-packages/"
     ],
     // Environment file lets vscode find python files within workspace
     "python.envFile": "${workspaceFolder}/.env",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.python"
+    },
     // Use the system installed version of autopep8
     "python.formatting.autopep8Path": "/usr/bin/autopep8",
     "python.formatting.autopep8Args": [
         "--max-line-length=100"
     ],
+    "cmake.configureOnOpen": false,
     "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
     "C_Cpp.formatting": "disabled",
     "uncrustify.configPath.linux": "/opt/ros/humble/lib/python3.10/site-packages/ament_uncrustify/configuration/ament_code_style.cfg",
@@ -70,5 +79,7 @@
         ".vscode",
         ".vscode-insiders",
         ".devcontainer/devcontainer.json"
-    ]
+    ],
+    "ros.distro": "humble",
+    "colcon.provideTasks": true,
 }
