--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,10 @@ ARG ROS_DISTRO=noetic
 ##########################################
 # Base Image for ros1 template workspace #
 ##########################################
+FROM nvidia/cuda:11.3.1-devel-ubuntu20.04 as gpu
+
+ENV NVIDIA_DRIVER_CAPABILITIES=all
+ENV NVIDIA_VISIBLE_DEVICES=all
 FROM osrf/ros:${ROS_DISTRO}-desktop-full as base
 ARG REPO
 ENV ROS_DISTRO=${ROS_DISTRO}
@@ -11,23 +15,90 @@ SHELL ["/bin/bash", "-c"]
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+# Hangul 언어 설정 HOST PC 설정 확인 $locale
+
+ENV LANG=en_US.UTF-8
+ENV LC_CTYPE="en_US.UTF-8"
+ENV LC_NUMERIC=ko_KR.UTF-8
+ENV LC_TIME=ko_KR.UTF-8
+ENV LC_COLLATE="en_US.UTF-8"
+ENV LC_MONETARY=ko_KR.UTF-8
+ENV LC_MESSAGES="en_US.UTF-8"
+ENV LC_PAPER=ko_KR.UTF-8
+ENV LC_NAME=ko_KR.UTF-8
+ENV LC_ADDRESS=ko_KR.UTF-8
+ENV LC_TELEPHONE=ko_KR.UTF-8
+ENV LC_MEASUREMENT=ko_KR.UTF-8
+ENV LC_IDENTIFICATION=ko_KR.UTF-8
+
+# # [230209] apt server to mirror kakao
+RUN cd /etc/apt && \
+    sed -i 's/archive.ubuntu.com/mirror.kakao.com/g' sources.list && \
+    sed -i 's/security.ubuntu.com/mirror.kakao.com/g' sources.list
+
+
 # Install basic apt packages
 RUN --mount=type=cache,target=/var/cache/apt,id=apt \
     apt-get update && apt-get upgrade -y \
     && apt-get install -q -y --no-install-recommends \
     build-essential libboost-all-dev \
+    python3-catkin-tools \
     udev \
     usbutils \
     ccache \
     cmake \
+    net-tools ssh \
     lld \
+    curl \
+    git \
+    python3-pip \
     git libcanberra-gtk-module libcanberra-gtk3-module fuse3 libqt5svg5-dev \
-    python3-pip python3-opencv python3-tk python3-pyqt5.qtwebengine \
+    libosmesa6-dev \
+    libgl1-mesa-glx \
+    libgl1-mesa-dri \
+    libglfw3 \
+    mesa-utils \
+    libglvnd0 \
+    libgl1 \
+    libglx0 \
+    libegl1 \
+    libxext6 \
+    libx11-6 \
+    psmisc \
     && rm -rf /var/lib/apt/lists/*
 
+
+RUN python3 -m pip install --upgrade pip
 # Install additional Python modules
-RUN pip3 install matplotlib transforms3d \
-    pytest pytest-cov pytest-mock pytest-xdist
+RUN pip3 install --ignore-installed empy \
+    catkin_pkg \
+    numpy==1.23.5 \
+    ruamel.yaml \
+    networkx==2.8.8  \
+    rospkg \
+    opencv-python==4.6.0.66 \
+    matplotlib \
+    jupyter \
+    setproctitle \
+    pymodbus \
+    open3d \
+    colorlog \
+    dynamixel-sdk \
+    empy==3.3.4 \
+    ultralytics \
+    scikit-image \
+    dill \
+    pybullet \
+    pandas \
+    multiprocess \
+    rosnumpy==0.0.5.2 \
+    omegaconf \
+    h5py
+
+RUN pip3 install \
+    torch torchvision 
+RUN pip3 install torchaudio --extra-index-url https://download.pytorch.org/whl/cu113 
+
 
 # Update the package list and install ROS1 packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -37,10 +108,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN mkdir -p /upstream_ws/src
 WORKDIR /upstream_ws/src
 RUN source /opt/ros/${ROS_DISTRO}/setup.bash \
-    && catkin_init_workspace \
-    && git clone -b ${ROS_DISTRO}-devel https://github.com/ROBOTIS-GIT/turtlebot3.git \
-    && git clone -b ${ROS_DISTRO}-devel https://github.com/ROBOTIS-GIT/turtlebot3_msgs.git \
-    && git clone -b ${ROS_DISTRO}-devel https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
+    && catkin_init_workspace 
 
 # Build the base catkin workspace, installing dependencies first.
 WORKDIR /upstream_ws
@@ -49,6 +117,7 @@ RUN source /opt/ros/${ROS_DISTRO}/setup.bash \
     && rosdep install --from-paths src --ignore-src --rosdistro ${ROS_DISTRO} -y \
     && catkin_make -DCMAKE_BUILD_TYPE=Release  \
     && rm -rf /var/lib/apt/lists/* 
+
 
 
 # Remove display warnings
@@ -69,11 +138,30 @@ FROM base AS overlay
 
 # Create an overlay catkin workspace
 RUN mkdir -p /overlay_ws/src
+
 WORKDIR /overlay_ws
 COPY ./${REPO}/ ./src/${REPO}/
-RUN source /upstream_ws/devel/setup.bash \
-    && catkin_make -DCMAKE_BUILD_TYPE=Release \
-    && rosdep install --from-paths src --ignore-src --rosdistro ${ROS_DISTRO} -y 
+
+WORKDIR /overlay_ws/src/${REPO}/ui
+
+WORKDIR /overlay_ws/src/${REPO}/ui/robot-api
+RUN touch .env \
+    && echo DATABASE_URL="file:./data/mydb.sqlite" > .env \
+    && echo PORT=8000 >> .env \
+    && echo JWT_SECRET="=jt6Bb@Tfei$(BwN$0A)8c/f<#~+k?v" >> .env 
+WORKDIR /overlay_ws/src/${REPO}/ui/robot-web
+RUN touch .env \
+    && echo NEXT_PUBLIC_API_URL='http://localhost:8000' > .env \
+    && echo NEXT_PUBLIC_ROBOT_SERIAL='MOROW00001' >> .env
+WORKDIR /overlay_ws/src/${REPO}/ui
+CMD ["./rebuid.sh" ]
+
+
+
+WORKDIR /overlay_ws
+RUN source /upstream_ws/devel/setup.bash 
+    # && catkin_make -DCMAKE_BUILD_TYPE=Release \
+    # && rosdep install --from-paths src --ignore-src --rosdistro ${ROS_DISTRO} -y 
 
 # Copy the VSCode settings
 COPY ./.vscode /overlay_ws/.vscode
@@ -96,16 +184,18 @@ ARG GID=${GID}
 RUN --mount=type=cache,target=/var/cache/apt,id=apt \
     apt-get update && apt-get install -y --no-install-recommends \
     gdb gdbserver nano \
-    git \
     openssh-client \
     python3-pip \
     vim \
     wget \
+    unzip \
+    locales \
+    whois \
+    software-properties-common \
+    apt-utils \
+    terminator \
+    python-is-python3 \
     && rm -rf /var/lib/apt/lists/*
-
-# install developer tools
-RUN python3 -m pip install --no-cache-dir \
-    pre-commit==3.0.4
 
 # Create new user and home directory
 RUN groupadd --gid $GID $USERNAME \
@@ -118,8 +208,27 @@ RUN groupadd --gid $GID $USERNAME \
 # Set the ownership of the overlay workspace to the new user
 RUN chown -R ${UID}:${GID} /overlay_ws/
 
+WORKDIR /home/${USERNAME}
+ENV NVM_VERSION v0.39.7
+ENV NODE_VERSION 18.17.0
+ENV NVM_DIR /home/${USERNAME}/.nvm
+RUN mkdir -p $NVM_DIR
+
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+RUN /bin/bash -c "source $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default"
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+RUN curl -L https://npmjs.com/install.sh | bash
+# RUN npm install -g pnpm \
+#     && npm install -g pm2 \
+#     && npm install -gnodemon \
+#     && npm install -g ts-node
 
 
+WORKDIR /overlay_ws
 # Set the user and source entrypoint in the user's .bashrc file
 USER ${USERNAME}
 RUN echo "source /entrypoint.sh" >> /home/${USERNAME}/.bashrc
