--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,22 @@
 
 version: "3.9"
 services:
+  gpu:
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile
+      target: gpu
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    image: ${REPO}-gpu:${ROS_DISTRO}
   # Base image containing dependencies.
   base:
+    extends: gpu
     build:
       context: .
       dockerfile: docker/Dockerfile
